# ike_template

./: .bash_profile  .gitconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cpr.sh  dc.sh  lint.sh  start_dev.sh  upp.sh
src/: configs.py  conftest.py  manage.py  pyproject.toml  pytest.ini  run_server.sh  run_tests.sh  update_i18n.py  wsgi.py
src/apps/: base.py
src/apps/example/: models.py  serializers.py  views.py
src/apps/healthz/: __init__.py  views.py
src/base_engine/: __init__.py
src/base_engine/controller/: base_controller.py
src/base_engine/unittests/controller/: test_base_controller.py
src/base_engine/view/: base_message.py  view_queue.py
src/extensions/: README.md  base_configs.py  gunicorn_config.py
src/extensions/cassandra_cql/: __init__.py
src/extensions/cassandra_migration/: models.py  utils.py
src/extensions/cassandra_orm/: __init__.py  management.py  utils.py
src/extensions/centrifugo/: __init__.py
src/extensions/flask_api/: api.py  debug.py  exceptions.py  serializer.py  views.py
src/extensions/kafka/: __init__.py
src/extensions/opentelemetry/: __init__.py
src/extensions/project_config/: __init__.py
src/extensions/redis_cluster/: __init__.py
src/extensions/sentry/: __init__.py
src/migrations/: 0001_example.py
src/sdk/: exception.py
src/sdk/flask_template/: __init__.py
src/unittests/: centrifugo_client.py  conftest.py  docs.py  kafka_client.py  kong_client.py  test_redis.py
src/unittests/example/: conftest.py  test_example.py  test_sdk.py
src/unittests/healthz/: test_healthz.py
(+19 files in other folders)
